# compressor

./: .pre-commit-config.yaml  404.html  README.md  bench.sh  collect_metrics.py  compress.py  demo.py  index.html  mkdocs.yml  objects.inv  print_metrics.py  pyproject.toml  scorecards.ipynb  search.html
.github/workflows/: ci.yml  docs.yml
_ref/climatebenchpress/compressor/: index.html
_ref/climatebenchpress/compressor/cf/: index.html
_ref/climatebenchpress/compressor/compressors/: index.html
_ref/climatebenchpress/compressor/compressors/abc/: index.html
_ref/climatebenchpress/compressor/compressors/bitround/: index.html
_ref/climatebenchpress/compressor/compressors/bitround_pco/: index.html
_ref/climatebenchpress/compressor/compressors/ebcc/: index.html
_ref/climatebenchpress/compressor/compressors/jpeg2000/: index.html
_ref/climatebenchpress/compressor/compressors/sperr/: index.html
_ref/climatebenchpress/compressor/compressors/stochround/: index.html
_ref/climatebenchpress/compressor/compressors/stochround_pco/: index.html
_ref/climatebenchpress/compressor/compressors/sz3/: index.html
_ref/climatebenchpress/compressor/compressors/tthresh/: index.html
_ref/climatebenchpress/compressor/compressors/utils/: index.html
_ref/climatebenchpress/compressor/compressors/zfp/: index.html
_ref/climatebenchpress/compressor/compressors/zfp_round/: index.html
_ref/climatebenchpress/compressor/metrics/: index.html
_ref/climatebenchpress/compressor/metrics/abc/: index.html
_ref/climatebenchpress/compressor/metrics/dssim/: index.html
_ref/climatebenchpress/compressor/metrics/mae/: index.html
_ref/climatebenchpress/compressor/metrics/max_abs_error/: index.html
_ref/climatebenchpress/compressor/metrics/max_rel_error/: index.html
_ref/climatebenchpress/compressor/metrics/psnr/: index.html
_ref/climatebenchpress/compressor/metrics/spectral_error/: index.html
_ref/climatebenchpress/compressor/monitor/: index.html
_ref/climatebenchpress/compressor/plotting/: index.html
_ref/climatebenchpress/compressor/plotting/error_dist_plotter/: index.html
_ref/climatebenchpress/compressor/scripts/: index.html
_ref/climatebenchpress/compressor/tests/: index.html
compressed-datasets/: .gitignore
compressors/: bitround-pco.toml  bitround.toml  linquant.toml  stochround.toml  sz3.toml  zfp.toml
datasets-error-bounds/: .gitignore
datasets-error-bounds/cmip6-access-ta/: error_bounds.json
datasets-error-bounds/cmip6-access-tos/: error_bounds.json
datasets-error-bounds/cmip6-canesm5-ta/: error_bounds.json
docs/: index.md  run_benchmark.md
metrics/: .gitignore
plots/: .gitignore
run_benchmark/: index.html
scripts/: collect_metrics.py  compress.py  compute_pareto_set.py  create_error_bounds.py  generate_report.py  plot_metrics.py  plot_summary_statistics.py  print_metrics.py
search/: search_index.json
src/climatebenchpress/compressor/: __init__.py  cf.py
src/climatebenchpress/compressor/compressors/: __init__.py  abc.py  bitround.py  bitround_new.py  bitround_new_new.py  bitround_new_new_new.py  bitround_pco.py  ebcc.py  ffmpeg.py  jpeg2000.py  rp.py  rp_dct.py  sperr.py  stochround.py  stochround_pco.py  sz3.py  tthresh.py  utils.py  zfp.py  zfp_round.py
src/climatebenchpress/compressor/metrics/: __init__.py  abc.py  abstract_metric.py  dssim.py  mae.py  max_abs_error.py  max_error.py  max_rel_error.py  psnr.py  spectral_error.py
src/climatebenchpress/compressor/plotting/: error_dist_plotter.py  plot_metrics.py  variable_plotters.py
src/climatebenchpress/compressor/scripts/: collect_metrics.py  compress.py  compute_metrics.py  concatenate_metrics.py  create_error_bounds.py  print_metrics.py
src/climatebenchpress/compressor/tests/: __init__.py  abc.py  abstract_test.py  error_bound.py  r2_correlation.py  spatial_relative_error.py
(+35 files in other folders)
