[project]
name = "climatebenchpress.compressor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cf-xarray~=0.10",
    "dask==2024.12.0",
    "field-compression-benchmark==0.0.15",
    "numcodecs-wasm-bit-round==0.2.0.dev0",
    "numcodecs-wasm-pco==0.1.0.dev0",
    "numcodecs-wasm-round==0.2.0.dev0",
    "numcodecs-wasm-swizzle-reshape==0.2.1.dev0",
    "numcodecs-wasm-sz3==0.3.0.dev0",
    "numcodecs-wasm-uniform-noise==0.2.0.dev0",
    "numcodecs-wasm-zfp==0.3.0.dev0",
    "numcodecs-wasm-zlib==0.2.0.dev0",
    "pandas~=2.2",
    "scipy~=1.15",
    "tabulate~=0.9",
    "xarray==2024.11.0",
    "zarr==2.18.3",
]

[dependency-groups]
dev = [
    "ipykernel~=6.29",
    "mypy~=1.14",
    "pandas-stubs~=2.2",
    "pre-commit~=4.0",
    "ruff~=0.9",
    "scipy-stubs~=1.15",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"climatebenchpress.compressor" = ["py.typed"]
