[project]
name = "climatebenchpress.compressor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cf-xarray~=0.10",
    "dask~=2024.12.0",
    "numcodecs>=0.13.0,<0.16",
    "numcodecs-combinators[xarray]~=0.2.4",
    "numcodecs-observers~=0.1.1",
    "numcodecs-wasm~=0.1.1",
    "numcodecs-wasm-bit-round~=0.2.0",
    "numcodecs-wasm-pco~=0.1.0",
    "numcodecs-wasm-round~=0.2.0",
    "numcodecs-wasm-sz3~=0.4.0",
    "numcodecs-wasm-tthresh~=0.1.0",
    "numcodecs-wasm-uniform-noise~=0.2.0",
    "numcodecs-wasm-zfp~=0.4.0",
    "numcodecs-wasm-zlib~=0.2.0",
    "pandas~=2.2",
    "scipy~=1.15",
    "tabulate~=0.9",
    "typed-classproperties~=1.1.0",
    "xarray~=2024.11.0",
    "zarr~=2.18.0",
]

[dependency-groups]
dev = [
    "ipykernel~=6.29",
    "mypy~=1.14",
    "pandas-stubs~=2.2",
    "pre-commit~=4.0",
    "ruff~=0.9",
    "scipy-stubs~=1.15",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"climatebenchpress.compressor" = ["py.typed"]

[[tool.mypy.overrides]]
module = ["numcodecs.*"]
follow_untyped_imports = true
