[project]
name = "climatebenchpress.compressor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "astropy~=7.0.1",
    "cartopy~=0.24.1",
    "cf-xarray~=0.10",
    "cftime~=1.6.0",
    "dask>=2024.12.0,<2025.4",
    "matplotlib~=3.8",
    "netcdf4~=1.7.2",
    "numcodecs>=0.13.0,<0.17",
    "numcodecs-combinators[xarray]~=0.2.4",
    "numcodecs-observers~=0.1.1",
    "numcodecs-wasm~=0.1.6",
    "numcodecs-wasm-bit-round~=0.3.0",
    "numcodecs-wasm-fixed-offset-scale~=0.3.0",
    "numcodecs-wasm-jpeg2000~=0.2.0",
    "numcodecs-wasm-pco~=0.2.0",
    "numcodecs-wasm-round~=0.3.0",
    "numcodecs-wasm-sperr~=0.1.0",
    "numcodecs-wasm-sz3~=0.6.0",
    "numcodecs-wasm-tthresh~=0.2.0",
    "numcodecs-wasm-uniform-noise~=0.3.0",
    "numcodecs-wasm-zfp~=0.5.1",
    "numcodecs-wasm-zfp-classic~=0.3.1",
    "numcodecs-wasm-zstd~=0.3.0",
    "pandas~=2.2",
    "scipy~=1.14",
    "seaborn~=0.13.2",
    "tabulate~=0.9",
    "typed-classproperties~=1.1.0",
    "xarray>=2024.11.0,<2025.4",
    "zarr~=2.18.0",
]

[dependency-groups]
dev = [
    "ipykernel~=6.29",
    "mypy~=1.14",
    "pandas-stubs~=2.2",
    "pre-commit~=4.0",
    "ruff~=0.9",
    "scipy-stubs~=1.15",
    "types-seaborn~=0.13.2.20250111",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"climatebenchpress.compressor" = ["py.typed"]

[[tool.mypy.overrides]]
module = ["numcodecs.*", "astropy.convolution.*", "cartopy.*"]
follow_untyped_imports = true
